--- a/css/theme/night.css
+++ b/css/theme/night.css
@@ -44,6 +44,12 @@ body {
 .reveal h1 {
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2); }
 
+.reveal h1.logo {
+  background: url('/lib/img/logo.png') no-repeat center center;
+  text-indent: -9999px;
+  background-size: contain;
+}
+
 /*********************************************
  * LINKS
  *********************************************/
